Fix store function
